[gd_scene load_steps=2 format=3 uid="uid://hbm45g6fu1cm"]

[ext_resource type="Script" uid="uid://it5a3xnlsgap" path="res://scripts/ui/menu.gd" id="1_7w7rl"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7w7rl")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05490196, 0.05490196, 0.06666667, 1)

[node name="Panel" type="PanelContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(270, 320)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -160.0
offset_right = 135.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "COOP CLEANUP"
horizontal_alignment = 1

[node name="NickNameContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NickLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/NickNameContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.23921569, 0.23921569, 0.23921569, 1)
theme_override_font_sizes/font_size = 9
text = "  NickName"

[node name="NickInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/NickNameContainer"]
layout_mode = 2
placeholder_text = "Jogador"
alignment = 1
max_length = 12

[node name="ButtonsContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Criar Sala"

[node name="EntrarContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="IpInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/ButtonsContainer/EntrarContainer"]
layout_mode = 2
placeholder_text = "0.0.0.0"

[node name="JoinButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsContainer/EntrarContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = " Entrar "

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Sair"

[node name="VersionLabel" type="Label" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 1.5
theme_override_colors/font_color = Color(0.23753911, 0.23753914, 0.23753911, 1)
theme_override_font_sizes/font_size = 8
text = "v0.01 - Web Prototype"
horizontal_alignment = 1

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ButtonsContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ButtonsContainer/EntrarContainer/JoinButton" to="." method="_on_join_button_pressed"]
